WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107697
[Chromium] Fix some #includes for WebSerializedScriptValue
https://bugs.webkit.org/show_bug.cgi?id=107697
Summary
[Chromium] Fix some #includes for WebSerializedScriptValue
Mark Pilgrim (Google)
Reported
2013-01-23 08:48:36 PST
[Chromium] Fix some #includes for WebSerializedScriptValue
Attachments
Patch
(2.16 KB, patch)
2013-01-23 08:52 PST
,
Mark Pilgrim (Google)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Pilgrim (Google)
Comment 1
2013-01-23 08:52:19 PST
Created
attachment 184247
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-23 09:40:15 PST
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
WebKit Review Bot
Comment 3
2013-01-23 11:58:05 PST
Comment on
attachment 184247
[details]
Patch Clearing flags on attachment: 184247 Committed
r140566
: <
http://trac.webkit.org/changeset/140566
>
WebKit Review Bot
Comment 4
2013-01-23 11:58:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug