[Chromium] Fix some #includes for WebSerializedScriptValue https://bugs.webkit.org/show_bug.cgi?id=107697

Reviewed by Adam Barth.

WebSerializedScriptValue has been moved to chromium/public/.

* public/WebDOMCustomEvent.h:
* public/WebDOMMessageEvent.h:
* public/WebIDBCursor.h:


git-svn-id: svn://svn.chromium.org/blink/trunk@140566 bbb929c8-8fbe-4397-9dbb-9b2b20218538