third_party/WebKit/Source/WebKit/chromium/public/WebDOMCustomEvent.h
@@ -32,7 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define WebDOMCustomEvent_h
 
 #include "WebDOMEvent.h"
-#include "platform/WebSerializedScriptValue.h"
+#include "WebSerializedScriptValue.h"
 
 namespace WebKit {
 
