third_party/WebKit/Source/WebKit/chromium/public/WebDOMMessageEvent.h
@@ -33,7 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "WebDOMEvent.h"
 #include "WebMessagePortChannel.h"
-#include "platform/WebSerializedScriptValue.h"
+#include "WebSerializedScriptValue.h"
 
 #if WEBKIT_IMPLEMENTATION
 #include "Event.h"
