third_party/WebKit/Source/WebKit/chromium/public/WebIDBCursor.h
@@ -30,8 +30,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "WebExceptionCode.h"
 #include "WebIDBCallbacks.h"
 #include "WebIDBKey.h"
+#include "WebSerializedScriptValue.h"
 #include "platform/WebCommon.h"
-#include "platform/WebSerializedScriptValue.h"
 #include "platform/WebString.h"
 
 namespace WebKit {
